# pyspark_pg

./: .gitignore  README.md  col_stats.md  pyproject.toml
stats/: col_stats.md  generate_and_save.py  generate_partitions.py  generate_table.py  partition_stats.md  read.py  read_hive.py  read_partitions.py
